--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "program": "${workspaceFolder}/main.py",
             "console": "integratedTerminal",
             "stopOnEntry": true,
-            "justMyCode": false
+            "justMyCode": false,
+            "args": ["--batch", "True"]
         }
     ]
 }
